--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import "./global.css";
 @import "./header.css"; /*importando o style do header*/
 @import "./intro.css";
+@import "./experiencia.css";
