--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -18,7 +18,7 @@
   .projetos {
     display: grid;
     gap: 20px;
-    position: relative;
+    
 
     .projeto {
       padding: 20px;
@@ -26,6 +26,7 @@
       background-color: #f3f3f3;
       border-radius: 4px;
       gap: 60px;
+      position: relative;
 
       h3 {
         margin-bottom: 15px;
@@ -34,10 +35,12 @@
 
     .projeto::before{
       content: "";
-      width: 10px;
-      height: 5px;
+      width: 5px;
+      height: 20px;
       background-color: greenyellow;
+
       position: absolute;
+      left: -5px;
     }
 
     ul {
