--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -18,6 +18,11 @@
   .projetos {
     display: grid;
     gap: 20px;
+
+    .subtitulo{
+      margin-top: 20px;
+      margin-bottom: 30px;
+    }
     
 
     .projeto {
@@ -78,4 +83,23 @@
 
     
   }
+}
+
+@media (max-width: 700px){
+
+  .experiencia{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+
+    .titulo-exp{
+      font-size: 3rem;
+      text-align: center;
+    }
+  }
+
+
+
+
+
 }
