--- a/css/formacao.css
+++ b/css/formacao.css
@@ -1,59 +1,119 @@
+.bg-collor {
+  background-color: #141414;
+  color: white;
+}
+
 .formacao {
-  background-color: #131313;
   max-width: 1200px;
   padding: 40px 20px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 100px;
-  margin: 0 auto;
-
-  .formacao-descricao {
-    color: #c6c6c6;
-    font-size: 20px;
-
-    strong {
-      color: white;
-    }
-  }
 
   .titulo-formacao {
-    max-height: auto;
-    font-size: 90px;
+    color: #000;
+    font-size: 8rem;
     word-break: break-all;
     text-transform: uppercase;
-    font-family: bold;
-    color: black;
   }
 
-  .cursos {
-    margin-top: 20px;
-    display: grid;
-    gap: 30px;
+  .formacao-descricao {
+    font-size: 1.5rem;
+    max-width: 40ch;
+    margin-bottom: 60px;
+    color: #a3a3a3;
+    margin-top: 50px;
 
-    .form-cards {
-      display: flex;
-      gap: 40px;
-
-      .cards {
-        display: grid;
-        background-color: black;
-        border-radius: 5px;
-        width: auto;
-        padding: 30px 80px 20px 10px;
-        gap: 10px;
-
-        .grau-form {
-          color: #c6c6c6;
-        }
-
-        p {
-          color: aliceblue;
-        }
-      }
+    strong {
+      color: #fff;
     }
   }
-}
 
-.bg-collor {
-  background-color: #131313;
+  .faculdade-lista {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 50px;
+
+    .faculdade {
+      flex: 1; /*usa isso aqui pra ficar tudo do mesmo tamanho*/
+      background-color: #000;
+      padding: 20px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .faculdade-tipo{
+        font-size: 0.875rem;
+        text-transform: uppercase;
+        color: #a3a3a3;
+        margin-bottom: 10px;
+        
+    }
+
+    .faculdade-curso{
+
+        font-size: 1.2rem;
+        line-height: 1.4;
+        margin-bottom: 40px;
+        position: relative;
+        flex: 1;
+
+    }
+
+    .faculdade-curso::before{
+         content: "";
+      width: 5px;
+      height: 20px;
+      background-color: greenyellow;
+
+      position: absolute;
+      left: -24px;
+    }
+
+    .faculdade-instituicao{
+        font-size: 1.5rem;
+    }
+    
+
+  }
+
+  .cursos{
+        margin-bottom: 20px;
+    }
+
+    .formacao-extra h3{
+        font-size: 0.875rem;
+        line-height: 1.4;
+        color: #8f8f8f;
+        text-transform: uppercase;
+        margin-bottom: 30px;
+        position: relative;
+
+        
+    }
+
+    .formacao-extra h3::before{
+        display: block;
+        content: "";
+        width: 24px;
+        height: 24px;
+        background: url(../img/cursos.svg) no-repeat center center;
+        position: absolute;
+        left: -36px;
+        top: -4px;
+    }
+
+    .idiomas h3::before{
+        display: block;
+        content: "";
+        width: 24px;
+        height: 24px;
+        background: url(../img/idiomas.svg) no-repeat center center;
+        position: absolute;
+        left: -36px;
+        top: -4px;
+    }
 }
