Codigo pronto. Responsivo e revisado no lighthouse do navegador

--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -9,7 +9,7 @@
 
   .titulo-exp {
     max-height: auto;
-    font-size: 90px;
+    font-size: 7rem;
     word-break: break-all;
     text-transform: uppercase;
     font-family: bold;
