--- a/css/formacao.css
+++ b/css/formacao.css
@@ -10,10 +10,11 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 100px;
+  position: relative;
 
   .titulo-formacao {
     color: #000;
-    font-size: 8rem;
+    font-size: 7rem;
     word-break: break-all;
     text-transform: uppercase;
   }
@@ -24,6 +25,7 @@
     margin-bottom: 60px;
     color: #a3a3a3;
     margin-top: 50px;
+    
 
     strong {
       color: #fff;
@@ -37,7 +39,7 @@
     margin-bottom: 50px;
 
     .faculdade {
-      flex: 1; /*usa isso aqui pra ficar tudo do mesmo tamanho*/
+      flex: 1; /*usa isso aqui pra ficar os cards tudo do mesmo tamanho*/
       background-color: #000;
       padding: 20px;
       border-radius: 4px;
@@ -64,7 +66,7 @@
     }
 
     .faculdade-curso::before{
-         content: "";
+      content: "";
       width: 5px;
       height: 20px;
       background-color: greenyellow;
@@ -116,4 +118,56 @@
         left: -36px;
         top: -4px;
     }
+
+    .formacao-extra li{font-size: 1.125rem;
+      line-height: 1.1;
+      margin-bottom: 20px;
+
+    }
+
+    .formacao-extra span{
+      color: #8f8f8f;
+    }
+    
+    .cursos li{
+      display: flex;
+      justify-content: space-between;
+    }
+
+}
+
+    /*o pseudo elemento so funciona sozinho*/
+    .formacao::after {
+      content: '';
+      display: block;
+      width: 130px;
+      height: 100px;
+      background: url(../img/detalhe.svg) no-repeat center center;
+      position: absolute;
+      bottom: -50px;
+      left: 30px;
+
+    }
+
+@media (max-width: 700px){
+
+  .formacao{
+    grid-template-columns: 1fr;
+    padding: 60px;
+    gap: 40px;
+
+     .titulo-formacao{
+     
+      word-break: normal; /*nao quebra a palavra*/
+      font-size: 4rem;
+      text-align: center;
+      display: block;
+     }
+
+  }
+
+  
+
+  
+ 
 }
