--- a/css/intro.css
+++ b/css/intro.css
@@ -30,6 +30,11 @@
     font-size: 1.5rem;
     color: #525252;
   }
+
+  img{
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media (max-width: 900px) {
