--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -5,6 +5,25 @@
   gap: 100px;
   padding: 40px 20px;
   margin: 0 auto;
+
+
+  h3 a {
+
+    text-decoration: none;
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    transition: background-color 0.2s ease;
+    border: transparent 1px solid;
+    
+    
+
+  }
+
+  a:hover{
+      background-color: rgb(228, 245, 217);
+    }
   
 
   .titulo-exp {
@@ -20,11 +39,11 @@
     display: grid;
     gap: 20px;
 
-    .subtitulo{
+    .subtitulo {
       margin-top: 30px;
       margin-bottom: 30px;
     }
-    
+
 
     .projeto {
       padding: 20px;
@@ -39,7 +58,7 @@
       }
     }
 
-    .projeto::before{
+    .projeto::before {
       content: "";
       width: 5px;
       height: 20px;
@@ -58,12 +77,12 @@
         display: flex;
         gap: 5px;
 
-        a{
+        a {
 
           text-decoration: none;
           background-color: white;
           border-radius: 4px;
-          
+
           color: black;
           padding: 5px;
           margin: 0px;
@@ -71,35 +90,35 @@
 
         }
 
-        a:hover{
+        a:hover {
 
           background-color: greenyellow;
-          
+
 
         }
       }
 
-      
+
     }
 
-    
+
   }
 }
 
-@media (max-width: 700px){
+@media (max-width: 700px) {
 
-  .experiencia{
+  .experiencia {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
 
-    .titulo-exp{
+    .titulo-exp {
       font-size: 3rem;
       text-align: center;
     }
   }
 
-  main{
+  main {
 
     border-bottom: #c3c3c3 1px dashed;
 
